[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "picombo"
version = "0.1.1"
description = "Users select an item from a list and retrieve it."
readme = "README.md"
authors = [{name = "Udon Asakawa", email = "udonuopn.a@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.7"
dependencies = [
    "prompt-toolkit"
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
homepage = "https://github.com/udonuopn/picombo"